--- a/MyCar/app/src/main/res/values/strings.xml
+++ b/MyCar/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">MyCar</string>
+    <string name="title_activity_add_distance">AddDistanceActivity</string>
 
 </resources>
